2009-01-24  Sébastien Granjoux  <seb.sfo@free.fr>

	* plugins/gdb/debugger.c:
	Fix #565188 – Invalid write on deinitialization

2009-01-24  Sébastien Granjoux  <seb.sfo@free.fr>

	* plugins/project-wizard/druid.c,
	plugins/project-wizard/parser.c,
	plugins/project-wizard/header.c,
	plugins/project-wizard/header.h,
	manuals/reference/libanjuta/project-wizard-format.sgml:
	Allow to read project templates from user defined directories
	Document this improvement

	* manuals/anjuta-manual/C/build.xml:
	Fix error in xml tags

	* plugins/scintilla/scintilla/Makefile.am,
	manuals/reference/libanjuta/Makefile.am:
	Fix makefile after scintilla move

	* plugins/project-wizard/appwizard.png:
	Use a transparent background for project wizard side image

2009-01-23  Massimo Cora'  <mcora@svn.gnome.org>

	* plugins/symbol-db/images/Makefile.am:
	* (added) plugins/symbol-db/images/element-interface-24.png
	* (added) plugins/symbol-db/images/element-method-24.png
	* plugins/symbol-db/plugin.c (register_stock_icons):
	added some icons for popup menu.	

2009-01-23  Carl-Anton Ingmarsson <ca.ingmarsson@gmail.com>

	reviewed by: Massimo Cora'  <mcora@svn.gnome.org>

	* plugins/symbol-db/plugin.c (on_session_load), (on_project_root_added):
	fixed #568119 – Automatic scanning of system-packages doesn't work

2009-01-20  Sébastien Granjoux  <seb.sfo@free.fr>

	* manuals/anjuta-manual/C/debugger.xml:
	Fix #568381 – Website manual chapter 5. Debugging

2009-01-21  Arun Tejasvi Chaganty  <arunchaganty@gmail.com>

	reviewed by: Sébastien Granjoux  <seb.sfo@free.fr>

	* src/anjuta-app.c
	libanjuta/anjuta-ui.h
	libanjuta/anjuta-ui.c:
	Fix #548310 – Allow plugins to load/save key accelerators
	Needed for vim plugin

2009-01-21  Michael Trimarchi  <michael@evidence.eu.com>

	reviewed by: Sébastien Granjoux  <seb.sfo@free.fr>

	* plugins/scratchbox/plugin.c,
	plugins/scratchbox/anjuta-scratchbox.glade,
	plugins/scratchbox/anjuta-scratchbox-48.png,