@@ -49,6 +49,8 @@ create_window (void)
  	window = gtk_window_new (GTK_WINDOW_TOPLEVEL);
  	gtk_window_set_title (GTK_WINDOW (window), _("window"));
  	gtk_window_set_default_size (GTK_WINDOW (window), 500, 400);
+	g_signal_connect (G_OBJECT (window), "destroy",
+			G_CALLBACK (gtk_main_quit), NULL);
 [+ENDIF+]
 	
 	return window;
