@@ -18,7 +18,7 @@
   <property name="skip_pager_hint">False</property>
   <property name="type_hint">GDK_WINDOW_TYPE_HINT_NORMAL</property>
   <property name="gravity">GDK_GRAVITY_NORTH_WEST</property>
-
+  <signal name="destroy" handler="destroy" object="NULL"/>
   <child>
     <placeholder/>
   </child>
