@@ -1,5 +1,16 @@
 2009-01-24  Sébastien Granjoux  <seb.sfo@free.fr>
 
+	* plugins/project-wizard/templates/gtk/src/callbacks.c,
+	plugins/project-wizard/templates/gtk/src/project.glade,
+	plugins/project-wizard/templates/gtk/src/callbacks.h,
+	plugins/project-wizard/templates/gnome/src/callbacks.c,
+	plugins/project-wizard/templates/gnome/src/project.glade,
+	plugins/project-wizard/templates/gnome/src/callbacks.h,
+	plugins/project-wizard/templates/gnome/src/main.c:
+	Fix #564308 – autogenerated gtk/gnome program does not exit
+
+2009-01-24  Sébastien Granjoux  <seb.sfo@free.fr>
+
 	* plugins/gdb/debugger.c:
 	Fix #565188 – Invalid write on deinitialization
 
